--- a/templates/index.html
+++ b/templates/index.html
@@ -2,30 +2,29 @@
 <html lang="en">
   <head>
 
-    <title>CodeDay-ify</title>
+    <title>Spectrafy</title>
 
-    <link rel="icon" type="image/png" href="https://codeday.org/assets/img/icon/favicon-196x196.png" />
+    <link rel="icon" type="image/png" href="https://github.com/catherinemcmahon/spectrahackathon.github.io/raw/master/images/logo-favicon.png" />
 
-    <meta name="generator" content="Justin Yang" />
 
     <!-- Google -->
-    <meta name="description" content="CodeDay-ify your profile picture!" />
-    <meta name="copyright" content="Justin Yang" />
+    <meta name="description" content="Spectrafy your profile picture!" />
+    <meta name="copyright" content="Spectra" />
 
     <!-- Facebook -->
-    <meta property="og:title" content="CodeDay-ify" />
-    <meta property="og:site_name" content="CodeDay-ify" />
+    <meta property="og:title" content="Spectrafy" />
+    <meta property="og:site_name" content="Spectrafy" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://codeday.org/assets/img/og.jpg" />
-    <meta property="og:url" content="http://codedayify.y4ng.com" />
-    <meta property="og:description" content="CodeDay-ify your profile picture!" />
+    <!-- <meta property="og:image" content="https://codeday.org/assets/img/og.jpg" /> -->
+    <meta property="og:url" content="http://spectrafy.sosopectra.com />
+    <meta property="og:description" content="Spectrafy your profile picture!" />
 
     <!-- Twitter -->
-    <meta name="twitter:title" content="CodeDay-ify" />
-    <meta name="twitter:description" content="CodeDay-ify your profile picture!" />
-    <meta name="twitter:image" content="https://codeday.org/assets/img/og.jpg" />
-    <meta name="twitter:url" content="http://codedayify.y4ng.com" />
-    <meta name="twitter:domain" content="codedayify.y4ng.com" />
+    <meta name="twitter:title" content="Spectrafy" />
+    <meta name="twitter:description" content="Spectrafy your profile picture!" />
+    <!-- <meta name="twitter:image" content="https://codeday.org/assets/img/og.jpg" /> -->
+    <meta name="twitter:url" content="http://spectrafy.sosopectra.com" />
+    <meta name="twitter:domain" content="http://spectrafy.sosopectra.com" />
 
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 
@@ -100,7 +99,7 @@
 
   <body>
 
-    <a href="https://github.com/justinyangusa/CodeDay-ify"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+    <a href="https://github.com/janetfang/spectrafy"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
     <div class="container">
       <h1>CodeDay-ify</h1>
@@ -112,7 +111,7 @@
           <label for="imagefile">Choose an image</label>
           <input type="file" name="imagefile" id="imagefile">
         </div>
-        <input type="submit" class="btn" value="CodeDay-ify!" id="codedayify"></input>
+        <input type="submit" class="btn" value="Spectrafy!" id="spectrafy"></input>
       </form>
       <p>Not working? Create one with the <a href="https://github.com/justinyangusa/CodeDay-ify/raw/master/mask.psd">Photoshop template</a> instead.</p>
     </div>
